# IoT_telem_mockup

./: README.md
device/: Cargo.toml
device/example/: data.ndjson
device/src/: main.rs
server/: server.py
