[package]
name = "device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
ureq = {version = "2.3.0", features = ["json"]}
chrono = "0.4"
tokio = { version = "1.36", features = ["full"] }
rand = "0.8.5"
uuid = {version = "1.8", features = ["v4"]}
